...
      userName: 'Tom Brown',
      firstName: 'Tom',
      lastName: 'Brown',
      email: 'tom@example.com',
      goalProgress: '45%',
      caloriesConsumed: '0',
      caloriesGoal: '2200',
      proteinConsumed: '0g',
      proteinGoal: '160g',
      carbsConsumed: '0g',
      carbsGoal: '275g',
      fatConsumed: '0g',
      fatGoal: '75g',
...
